--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -1,6 +1,19 @@
 
 /*ICON-SPRITE*/
 
+.contacts__icon {
+    margin-right: 10px;
+    fill: currentColor;
+
+}
+
+.contacts__icon {
+
+    margin-right: 10px;
+    fill: currentColor;
+
+}
+
 // .cross {
 //     fill: var(--logo-black-color);
 
@@ -36,3 +49,4 @@
 //     width: 370px;
 //     height: 294px;
 // }
+
