--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,14 +1,20 @@
 .nav__list {
     display: flex;
     margin-left: 92px;
+
+
+& .nav__item:not(:last-child) {
+        margin-right: 50px;
+
+    }
+
+& .nav__link:hover,
+& .nav__link:focus {
+    color: var(--accent-color);
+
 }
 
-.nav__list .nav__item:not(:last-child) {
-    margin-right: 50px;
-
-}
-
-.nav__list .nav__link {
+& .nav__link {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -21,33 +27,29 @@
     color: var(--title-text-color);
     transition: color var(--transition);
 
-    
+    &.nav__link--current {
+        color: var(--accent-color);
+        position: relative;
 
+
+
+    }
+
+    &.nav__link--current::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent-color);
+        position: absolute;
+        bottom: -3px;
+        border-radius: 2px;
+
+    }
+}
 
 }
 
-.nav__list .nav__link:hover,
-.nav__list .nav__link:focus {
-    color: var(--accent-color);
-
-}
-
-.nav__list .nav__link--current {
-    color: var(--accent-color);
-    position: relative;
-}
-
-.nav__list .nav__link--current::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: var(--accent-color);
-    position: absolute;
-    bottom: -3px;
-    border-radius: 2px;
-
-}
 
 /*Auth-nav*/
 
@@ -55,13 +57,15 @@
     display: flex;
     margin-left: auto;
 
+    & .item+.item {
+            margin-left: 50px;
+        }
+&__item:not(:last-child) {
+    margin-right: 50px;
+
 }
 
-.contacts .item+.item {
-    margin-left: 50px;
-}
-
-.contacts .contacts__link {
+&__link {
     display: flex;
     align-items: center;
     font-weight: 500;
@@ -71,29 +75,12 @@
     text-decoration: none;
     color: var(--primery-text-color);
     transition: color var(--transition);
+
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+
+    }
 }
-
-
-.contacts .contacts__link:hover,
-.contacts .lcontacts__link:focus {
-    color: var(--accent-color);
-
-}
-
-.contacts .contacts__item:not(:last-child) {
-    margin-right: 50px;
-
-}
-
-.contacts__icon {
-    margin-right: 10px;
-    fill: currentColor;
-
-}
-
-.contacts__icon {
-
-    margin-right: 10px;
-    fill: currentColor;
 
 }
