--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -1,4 +1,4 @@
-/*FOOTER subscribe*/
+/*Subscribe*/
 
 .subscribe-form {
     display: flex;
@@ -28,18 +28,20 @@
     letter-spacing: 0.03em;
     color: var(--transparent-color);
 
+
+    &::placeholder {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;
+        color: var(--transparent-color);
+
+        display: flex;
+        align-items: center;
+    }
+    
 }
 
-.subscribe-input::placeholder {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
-    color: var(--transparent-color);
-
-    display: flex;
-    align-items: center;
-}
 
 .subscribe-icon {
     margin-left: 10px;
